[gd_scene load_steps=2 format=3 uid="uid://c0tn7qebqrmiy"]

[ext_resource type="Script" uid="uid://6ad35hve5ish" path="res://microgames/alien_attack/entities/enemies/enemy_spawner.gd" id="1_46kv7"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_46kv7")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="Spawn01" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 50)

[node name="Spawn02" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 175)

[node name="Spawn03" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 300)

[node name="Spawn04" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 425)

[node name="Spawn05" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 550)

[node name="Spawn06" type="Marker2D" parent="SpawnPositions"]
position = Vector2(1350, 675)

[node name="EnemySpawnTimeout" type="Timer" parent="."]
autostart = true

[node name="PathEnemySpawnTimeout" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="EnemySpawnTimeout" to="." method="_on_enemy_spawn_timeout"]
[connection signal="timeout" from="PathEnemySpawnTimeout" to="." method="_on_path_enemy_spawn_timeout"]
